--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql:my_spring_blog
 spring.datasource.username=student
 spring.datasource.password=himitu
-# SQL実行出力
+
+# SQL実行出力(Hibernate のSQLログ)
 spring.jpa.show-sql=true
+
 # schema.sqlとdata.sqlの自動実行
 spring.sql.init.mode=always
